--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,9 +1,12 @@
 name: Build Android APK
 
 on:
-  workflow_dispatch:
-  push:
+  workflow_dispatch:        # manual "Run workflow" button
+  push:                     # auto-run when you commit to main
     branches: [ "main" ]
+    paths:
+      - ".github/workflows/android.yml"
+      - "README.md"
 
 jobs:
   build:
@@ -11,23 +14,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Setup Java (needed for Android/Gradle)
+      # Java for Android/Gradle
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "17"
 
-      # Setup Flutter
+      # Flutter SDK
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.22.2"
           channel: "stable"
 
-      # Create a new Flutter app in a subfolder (scaffold Gradle project)
+      # Create a brand-new Flutter app in a subfolder (clean Gradle project)
       - name: Scaffold Flutter app
-        run: flutter create -t app behemoth_slayer_app --platforms=android
+        run: flutter create -t app behemoth_slayer_app --platforms=android --org com.bs
 
-      # Inject our Behemoth Slayer scaffold UI
+      # Inject our simple UI (overwrites the generated main.dart)
       - name: Inject app code
         run: |
           cat > behemoth_slayer_app/lib/main.dart <<'EOF'
@@ -43,4 +46,136 @@ class BehemothApp extends StatelessWidget {
     final theme = ThemeData(
       brightness: Brightness.dark,
       scaffoldBackgroundColor: const Color(0xFF0B0F14),
-      colorScheme:
+      colorScheme: ColorScheme.fromSeed(
+        seedColor: const Color(0xFFEF4444),
+        brightness: Brightness.dark,
+      ),
+      fontFamily: 'Roboto',
+    );
+
+    return MaterialApp(
+      title: 'Behemoth Slayer',
+      theme: theme,
+      home: const HomeScreen(),
+      debugShowCheckedModeBanner: false,
+    );
+  }
+}
+
+class HomeScreen extends StatelessWidget {
+  const HomeScreen({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return Scaffold(
+      appBar: AppBar(
+        title: const Text('Behemoth Slayer'),
+        backgroundColor: const Color(0xFF111722),
+      ),
+      body: Padding(
+        padding: const EdgeInsets.all(16),
+        child: Column(
+          crossAxisAlignment: CrossAxisAlignment.start,
+          children: [
+            Text('Today’s Battle', style: Theme.of(context).textTheme.headlineSmall),
+            const SizedBox(height: 12),
+            _Card(
+              child: Column(
+                crossAxisAlignment: CrossAxisAlignment.start,
+                children: [
+                  const Text('XP', style: TextStyle(color: Colors.white70)),
+                  const SizedBox(height: 6),
+                  ClipRRect(
+                    borderRadius: BorderRadius.circular(8),
+                    child: LinearProgressIndicator(
+                      value: .1, minHeight: 10, backgroundColor: Color(0xFF1F2A44),
+                    ),
+                  ),
+                  const SizedBox(height: 12),
+                  const Text('Behemoth HP', style: TextStyle(color: Colors.white70)),
+                  const SizedBox(height: 6),
+                  ClipRRect(
+                    borderRadius: BorderRadius.circular(8),
+                    child: LinearProgressIndicator(
+                      value: .6, minHeight: 10, color: Colors.green, backgroundColor: Color(0xFF1F2A44),
+                    ),
+                  ),
+                  const SizedBox(height: 12),
+                  const Text(
+                    'This is the scaffold. We’ll add habits, reminders, avatar, seasons, halls, etc. in phases.',
+                    style: TextStyle(color: Colors.white60),
+                  ),
+                ],
+              ),
+            ),
+            const SizedBox(height: 16),
+            Row(
+              children: [
+                Expanded(
+                  child: _Card(
+                    child: Column(
+                      crossAxisAlignment: CrossAxisAlignment.start,
+                      children: const [
+                        Text('Habits', style: TextStyle(fontWeight: FontWeight.bold)),
+                        SizedBox(height: 8),
+                        Text(
+                          'Wake • Sleep • Shower • Laundry • Groceries • Car • Hair • Gym (Fri/Sat)',
+                          style: TextStyle(color: Colors.white70),
+                        ),
+                      ],
+                    ),
+                  ),
+                ),
+              ],
+            ),
+            const Spacer(),
+            SizedBox(
+              width: double.infinity,
+              child: ElevatedButton(
+                style: ElevatedButton.styleFrom(padding: EdgeInsets.symmetric(vertical: 14)),
+                onPressed: () {},
+                child: const Text('This is a demo build • More coming'),
+              ),
+            ),
+          ],
+        ),
+      ),
+    );
+  }
+}
+
+class _Card extends StatelessWidget {
+  final Widget child;
+  const _Card({required this.child});
+
+  @override
+  Widget build(BuildContext context) {
+    return Container(
+      padding: const EdgeInsets.all(14),
+      decoration: BoxDecoration(
+        color: const Color(0xFF0D1420),
+        border: Border.all(color: Color(0xFF1B2230)),
+        borderRadius: BorderRadius.circular(14),
+      ),
+      child: child,
+    );
+  }
+}
+EOF
+
+      # Get packages for the generated app
+      - name: Get packages
+        working-directory: behemoth_slayer_app
+        run: flutter pub get
+
+      # Build release APK
+      - name: Build APK
+        working-directory: behemoth_slayer_app
+        run: flutter build apk --release
+
+      # Upload the APK as an artifact
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: BehemothSlayer-APK
+          path: behemoth_slayer_app/build/app/outputs/flutter-apk/app-release.apk
